--- a/config/bdt.config
+++ b/config/bdt.config
@@ -1,46 +1,73 @@
 {
-  "inputDirectory" : "/bdt-samples/input",
-  "outputDirectory" : "/bdt-samples/output",
-  "threadCount" : 4,
-  "batchSize" : 1000,
-  "vts" : {
-    "hostName" : "cts-server-1.scoobylab.com",
-    "userName" : "cts-user",
-    "password" : "0j571fX6CFBQfqapneKIDg==",
-    "tokenUrl" : "https://cts-server-1.scoobylab.com/vts/rest/v2.0/tokenize",
-    "detokenUrl" : "https://cts-server-1.scoobylab.com/vts/rest/v2.0/detokenize",
-    "sslConfig" : {
-      "serverConfig" : {
-        "truststore" : "",
-        "password" : "0j571fX6CFBQfqapneKIDg==",
-        "verifyHostname" : true,
-        "sslMode" : "ALLOW_ALL"
+  "inputDirectory": "/bdt-samples/input",
+  "outputDirectory": "/bdt-samples/output",
+  "threadCount": 4,
+  "batchSize": 1000,
+  "vts": {
+    "hostName": "cts-server",
+    "userName": "cts-user",
+    "password": "",
+    "tokenUrl": "https://cts-server/vts/rest/v2.0/tokenize",
+    "detokenUrl": "https://cts-server/vts/rest/v2.0/detokenize",
+    "ssl": {
+      "server": {
+        "sslmode": "ALLOW_ALL",
+        "verifyHostname": false,
+        "truststore": "",
+        "password": ""
       },
-      "clientConfig" : {
-        "keystore" : "",
-        "sslMode" : "ALLOW_ALL",
-        "storePassword" : "0j571fX6CFBQfqapneKIDg==",
-        "keyPassword" : "0j571fX6CFBQfqapneKIDg=="
+      "client": {
+        "sslmode": "ALLOW_ALL",
+        "keystore": "",
+        "storepassword": "",
+        "keypassword": ""
       }
     }
   },
-  "crypto" : {
-    "@type" : "JCE",
-    "username" : "admin",
-    "password" : "0j571fX6CFBQfqapneKIDg=="
+  "crypto": {
+    "@type": "JCE",
+    "username": "cm_key_owner",
+    "password": ""
   },
-  "dataProtectionConfig" : {
-    "@type" : "password",
-    "username" : "admin",
-    "password" : "0j571fX6CFBQfqapneKIDg=="
+  "dataProtectionConfig": {
+    "@type": "password",
+    "username": "cm_bdt_policy_owner",
+    "password": "",
+    "hostName": "cm-server",
+    "serverConfig": {
+      "truststore": "",
+      "password": "",
+      "verifyHostname": "true"
+    },
+    "clientConfig": {
+      "keystore": "",
+      "storePassword": "",
+      "keyPassword": ""
+    }
   },
-  "characterSets" : [ {
-    "latin" : [ "0020-007E" ]
-  }, {
-    "digits" : [ "0030-0039" ]
-  }, {
-    "alphabets" : [ "0041-005A", "0061-007A" ]
-  }, {
-    "alphanumeric" : [ "0030-0039", "0041-005A", "0061-007A" ]
-  } ]
+  "characterSets": [
+    {
+      "latin": [
+        "0020-007E"
+      ]
+    },
+    {
+      "digits": [
+        "0030-0039"
+      ]
+    },
+    {
+      "alphabets": [
+        "0041-005A",
+        "0061-007A"
+      ]
+    },
+    {
+      "alphanumeric": [
+        "0030-0039",
+        "0041-005A",
+        "0061-007A"
+      ]
+    }
+  ]
 }
